✨ Simplified version WITHOUT database!
🎯 Changes:
- Created simple-auth.ts - simple username/password check
- Created simple-data.ts - data stored in memory (arrays)
- Created simple-routes.ts - simple routes without database
- Created simple-index.ts - simple server
- Updated package.json to use simple version

✅ Benefits:
- No database needed!
- No PostgreSQL/SQLite setup
- Works on any hosting
- Perfect for demo/portfolio
- Admin: admin/admin123

⚠️ Note:
- Orders/contacts don't persist after restart
- Pizzas/ingredients are in code (persist)
- Uploaded images persist (files)

🚀 Deploy:
- Just push to GitHub
- Vercel deploys automatically
- No database setup needed!

See SIMPLE_VERSION.md for details

--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "seed": "tsx server/seed.ts",
-    "setup:vercel": "tsx scripts/setup-vercel-db.ts",
-    "vercel-build": "npm run build && npm run setup:vercel"
+    "dev": "NODE_ENV=development tsx server/simple-index.ts",
+    "dev:old": "NODE_ENV=development tsx server/index.ts",
+    "build": "vite build && esbuild server/simple-index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build:old": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "start": "NODE_ENV=production node dist/simple-index.js",
+    "check": "tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
