🔧 Fix Vercel deployment - Serverless API
✅ Changes:
- Created /api/index.js - Vercel serverless function
- Updated vercel.json - proper builds and routes config
- Updated package.json - simplified build for Vercel
- Added VERCEL_FIX.md - deployment instructions

🎯 How it works:
- Frontend: static build (vite build)
- Backend: serverless function (/api/index.js)
- Auth: simple check (admin/admin123)
- Data: in-memory (arrays)

✅ Now works on Vercel:
- Admin login works!
- All API endpoints work!
- No database needed!

⚠️ Note:
- Data doesn't persist between cold starts
- Perfect for demo/portfolio!

See VERCEL_FIX.md for details

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx server/simple-index.ts",
     "dev:old": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/simple-index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "build:old": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build",
+    "build:server": "esbuild server/simple-index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production node dist/simple-index.js",
-    "check": "tsc"
+    "check": "tsc",
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
